Explicitly use asset_path helper

--- a/app/assets/stylesheets/tinymce.scss.erb
+++ b/app/assets/stylesheets/tinymce.scss.erb
@@ -1,7 +1,7 @@
 /* IMPORTS STYLES USED FOR SITE */
-@import url(<%= asset_path 'tinymce/skins/ui/oxide/skin.min.css' %>);
-@import url(<%= asset_path 'tinymce/skins/ui/oxide/skin.mobile.min.css' %>);
-@import url(<%= asset_path 'tinymce/skins/content/default/content.min.css' %>);
+@import url(<%= ActionController::Base.helpers.asset_path 'tinymce/skins/ui/oxide/skin.min.css' %>);
+@import url(<%= ActionController::Base.helpers.asset_path 'tinymce/skins/ui/oxide/skin.mobile.min.css' %>);
+@import url(<%= ActionController::Base.helpers.asset_path 'tinymce/skins/content/default/content.min.css' %>);
 
 body.mce-content-body {
   margin: 20px;
